# Pico_setuptools

./: CMakeLists.txt  LICENSE  README.md  connect_picoprobe.sh
tool/: attach_picoprobe.sh
vscode_config/: launch.json  tasks.json
